--- a/demo/src/main/resources/application.yml
+++ b/demo/src/main/resources/application.yml
@@ -35,6 +35,16 @@ spring:
   output:
     ansi:
       enabled: DETECT
+  redis:
+    host: 192.168.99.100
+    port: 6379
+    jedis:
+      pool:
+        max-idle: 8
+        min-idle: 0
+        max-active: 8
+        max-wait: -1
+    timeout: 0
 mybatis-plus:
   mapper-locations: classpath:com/example/demo/web/mapper/mapping/*Mapper.xml
   #实体扫描，多个package用逗号或者分号分隔
